# fastapi-csp-docs

./: .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: labeler.yml
.github/workflows/: create-draft-release.yml  latest-changes.yml  prepare-release.yml  test-redistribute.yml  test.yml
examples/: _csp.py  assisted_app.py  mounted_subapp_app.py  oauth2_redirect_app.py  redoc_disable_search_app.py  root_path_app.py  self_hosted_app.py
examples/static/: fonts.css  redoc.standalone.js  swagger-ui-bundle.js
fastapi_csp_docs/: __init__.py  docs.py  setup.py
scripts/: format.sh  lint.sh
tests/: test_docs.py  test_setup.py
